--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,24 @@
       <load src="partials/header/header.html" />
 
       <main class="main">
-        <load src="partials/home/event.html" />
+        <load src="partials/home/hero.html" />
         <load src="partials/home/about.html" />
+        <load src="partials/home/useful.html" />
         <load src="partials/home/commit.html" />
-        <load src="partials/home/speaker.html" />
+
+        <div class="sec-group bg-green bottom-radius top-pseudo">
+          <load src="partials/home/speaker.html" />
+        </div>
+
+        <!-- <load src="partials/home/case.html" /> -->
         <load src="partials/home/summit.html" />
-        <load src="partials/home/gallery.html" />
-        <load src="partials/home/connect.html" />
+
+        <div class="sec-group bg-green top-radius">
+          <!-- <load src="partials/home/tickets.html" /> -->
+          <load src="partials/home/gallery.html" />
+          <!-- <load src="partials/home/sponsors.html" /> -->
+          <load src="partials/home/connect.html" />
+        </div>
       </main>
 
       <load src="partials/footer/footer.html" />
