--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <load src="partials/home/speaker.html" />
         </div>
 
-        <!-- <load src="partials/home/case.html" /> -->
+        <load src="partials/home/case.html" />
         <load src="partials/home/summit.html" />
 
         <div class="sec-group bg-green top-radius">
