--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <load src="partials/home/case.html" />
-        <load src="partials/home/summit.html" />
+        <load src="partials/home/program.html" />
 
         <div class="sec-group bg-green top-radius">
           <!-- <load src="partials/home/tickets.html" /> -->
