--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <load src="partials/home/program.html" />
 
         <div class="sec-group bg-green top-radius">
-          <!-- <load src="partials/home/tickets.html" /> -->
+          <load src="partials/home/tickets.html" />
           <load src="partials/home/gallery.html" />
           <!-- <load src="partials/home/sponsors.html" /> -->
           <load src="partials/home/connect.html" />
