--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <div class="sec-group bg-green top-radius">
           <load src="partials/home/tickets.html" />
           <load src="partials/home/gallery.html" />
-          <!-- <load src="partials/home/sponsors.html" /> -->
+          <load src="partials/home/sponsors.html" />
           <load src="partials/home/connect.html" />
         </div>
       </main>
