--- a/src/thank.html
+++ b/src/thank.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
 
-  <body class="thankPage">
+  <body class="thankPage header-style footer-trnspr">
     <div class="wrapper">
       <load src="partials/header/header.html" />
 
@@ -18,6 +18,8 @@
       </main>
 
       <load src="partials/footer/footer.html" />
+
+      <load src="partials/modals/registr.html" />
     </div>
 
     <script type="module" src="./js/main.js"></script>
