--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <main class="main">
         <load src="partials/home/hero.html" />
         <load src="partials/home/about.html" />
+        <load src="partials/home/conf.html" />
         <load src="partials/home/useful.html" />
         <load src="partials/home/commit.html" />
 
